# toy-kernel

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bootstrap.yml  compile_commands.json
hello/: main.cpp  meson.build
kernel/: CMakeLists.txt  LICENSE  kernel.c  kernel.cpp  main.cpp
kernel/acpi/: acpi.c  acpi.cpp  acpi.h  hpet.c  hpet.cpp  hpet.h  madt.h
kernel/arch/: asm.cpp  asm.h  gdt.c  gdt.cpp  gdt.h  idt.asm  idt.c  idt.cpp  idt.h  msr.c  msr.cpp  msr.h  port.asm  port.cpp  port.h
kernel/boot/: stivale2.cpp  stivale2.h
kernel/ds/: bitmap.cpp  bitmap.h  linked_list.h  lock.cpp  lock.h  vector.h
kernel/interrupts/: apic.c  apic.cpp  apic.h  interrupts.asm  interrupts.c  interrupts.cpp  interrupts.h
kernel/intr/: apic.cpp  apic.h  intr.asm  intr.cpp  intr.h
kernel/lib/: log.cpp  log.h  memory.cpp  runtime.cpp  string.cpp
kernel/mem/: heap.c  heap.cpp  heap.h  phys.c  phys.cpp  phys.h  virt.c  virt.cpp  virt.h
kernel/mm/: heap.cpp  heap.h  pmm.cpp  vmm.cpp  vmm.h
kernel/proc/: cpu.c  cpu.cpp  cpu.h  sched.c  sched.cpp  sched.h  smp.c  smp.h  task.cpp  task.h  thread.c  thread.cpp  thread.h
kernel/src/: main.cpp
kernel/src/acpi/: acpi.cpp  acpi.h  hpet.cpp  hpet.h  madt.h
kernel/src/arch/: asm.cpp  asm.h  cpu.cpp  cpu.h  gdt.asm  gdt.cpp  gdt.h  idt.asm  idt.cpp  idt.h
kernel/src/boot/: stivale2.cpp  stivale2.h
kernel/src/dev/: pci.cpp  pci.h  udev.cpp  udev.h
kernel/src/ds/: bitmap.cpp  bitmap.h  linked_list.h  ring_buffer.h  string.cpp  string.h  vector.h
kernel/src/fs/: dev_fs.cpp  dev_fs.h  device_fs.cpp  device_fs.h  fd.cpp  fd.h  module_fs.cpp  module_fs.h  vfs.cpp  vfs.h
kernel/src/intr/: apic.cpp  apic.h  intr.asm  intr.cpp  intr.h
kernel/src/lib/: addr.h  console.cpp  console.h  log.cpp  log.h  memory.cpp  plugs.cpp  runtime.cpp
kernel/src/mm/: heap.cpp  heap.h  pmm.cpp  pmm.h  vmm.cpp  vmm.h
kernel/src/proc/: elf.h  sched.cpp  sched.h  syscall.asm  syscall.cpp  syscall.h  task.cpp  task.h
kernel/src/sched/: process.cpp  process.h  sched.cpp  sched.h  syscall.asm  syscall.cpp
kernel/utils/: align.h  elf.h  linked_list.h  ll.c  ll.h  print.c  print.cpp  print.h  spin.c  spin.cpp  spin.h  string.c  string.cpp  utils.h  vector.h
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/src/core/: hash.h  hash_map.h  lock.cpp  lock.h  string.cpp  string.h  type_traits.h  vector.h
libs/plugs/: CMakeLists.txt
libs/plugs/src/plugs/: plugs.h
libs/system/: CMakeLists.txt
libs/system/src/system/: syscalls.cpp  syscalls.h
misc/: build-initrd.sh  create-disk-image.sh  kernel.ld  limine.cfg  ovmf-code-pure-efi.fd  ovmf-vars-pure-efi.fd  user.ld  x86_64-toy.cross-file
patches/automake-v1.16/: 1.patch
patches/binutils/: 1.patch
patches/gcc/: 1.patch  2.patch
patches/mlibc/: 1.patch
user/fs/: fd.cpp  fd.h  module_fs.cpp  module_fs.h  vfs.cpp  vfs.h
user/hello/: CMakeLists.txt
user/hello/src/: main.cpp
